<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Football Scores</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="test_text">Test</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="champions_league">UEFA Champions League</string>
    <string name="bundesliga">Bundesliga</string>
    <string name="premierleague">Premier League</string>
    <string name="primeradivison">Primera Division</string>
    <string name="seriaa">Serie A</string>
    <string name="matchday_text">Match day</string>
    <string name="group_stage_text">Group stages</string>
    <string name="first_knockout_round">First knockout round</string>
    <string name="quarter_final">Quarter Final</string>
    <string name="semi_final">Semi Final</string>
    <string name="final_text">Final</string>
    <string name="share_text">Share</string>
    <string name="about">About</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about_text">
        This Application get Football Matches Score for the Premier League,Seria A,Bundesliga,Primera Division
        and the Uefa Champions League.
        All Matches data are acquired from football-data.org free API.
        All team Logos are acquired from http://hdlogo.wordpress.com/ upon requesting permission form the owner.
        The original version of this app was created by Yahia Khalid Ibn El Walid Ahmed, and a modified version is given to students in the Udacity Android Nanodegree program.
        To report any bugs,or suggestions do not hesitate to send a mail to y.k.ibnelwalid@gmail.com.

        During the off season, fake data will be added to the app.
    </string>
    <string name="widget_text">Football Scores</string>
    <string name="api_key" translatable="false"></string>
    <string name="dummy_data" translatable="false">{\"timeFrameStart\":\"2015-06-18\",\"timeFrameEnd\":\"2015-06-19\",\"count\":1,\"fixtures\":[{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}}]}</string>

    <string name="no_results_found_title">No results found</string>

    <string name="content_league_name">Shows the league name</string>
    <string name="content_match_day">Show the match day</string>
    <string name="content_share_button">Button to share matches informations</string>
    <string name="content_widget_icon">App icon</string>
    <string name="content_widget_title">Shows the app name </string>
    <string name="content_widget_subtitle">Shows the subtitle name </string>
    <string name="content_widget_matches_list">List to show matches scores </string>
    <string name="content_about">Talks about app development and developers</string>
    <string name="content_image_home">Image to show icon of home team</string>
    <string name="content_home_name">Show name home team</string>
    <string name="content_score">Shows final score of match</string>
    <string name="content_image_away">Image to show icon of away team </string>
    <string name="content_away_name">Show name away team </string>
    <string name="content_date">Shows data of match</string>
    <string name="not_known_league_text">Not known League Please report</string>

    <string name="football_widget">Football Widget</string>
    <string name="widget_subtitle">SCORES</string>
    <string name="widget_away">Away</string>
    <string name="widget_date">Date</string>
    <string name="widget_final_score">Final Score</string>
    <string name="widget_home">Home</string>
    <string name="content_matches_list">List of Matches</string>
    <string name="util_seria_a">Seria A</string>
    <string name="util_premier_league">Premier League</string>
    <string name="util_champions_league">UEFA Champions League</string>
    <string name="util_primera_division">Primera Division</string>
    <string name="util_bundesliga">Bundesliga</string>
    <string name="util_not_known">Not known League Please report</string>
    <string name="util_group_stages">Group Stages, Matchday : 6</string>
    <string name="util_first_knockout">First Knockout round</string>
    <string name="util_quarter_final">QuarterFinal</string>
    <string name="util_semi_final">SemiFinal</string>
    <string name="util_final">Final</string>
    <string name="util_matchday">"Matchday : "</string>

</resources>
