<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#bbDEDFDE"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/widgetLayoutMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#aaDEDFDE"
        android:orientation="horizontal"
        android:paddingEnd="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingStart="5dp">

        <ImageView
            android:id="@+id/widgetImgLauncher"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/content_widget_icon"
            android:src="@drawable/ic_launcher" />

        <LinearLayout
            android:id="@+id/widgetTopBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="4dp"
            android:paddingEnd="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingStart="8dp"
            android:paddingTop="4dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_widget_title"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txvWidgetTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_widget_subtitle"
                android:text="@string/widget_subtitle"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />

    <ListView
        android:id="@+id/widget_collection_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content_widget_matches_list" />

</LinearLayout>