<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_item_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/widget_home_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/widget_margin"
        android:maxWidth="100dp"
        android:text="@string/widget_home"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/material_blue_grey_950" />

    <TextView
        android:id="@+id/widget_final_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:lines="1"
        android:layout_margin="@dimen/widget_margin"
        android:maxWidth="60dp"
        android:text="@string/widget_final_score"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/material_blue_grey_950" />

    <TextView
        android:id="@+id/widget_away_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/widget_margin"
        android:maxWidth="100dp"
        android:text="@string/widget_away"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/material_blue_grey_950" />

    <TextView
        android:id="@+id/widget_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/widget_home_name"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/widget_margin"
        android:text="@string/widget_date"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/material_blue_grey_950" />
</RelativeLayout>